--- a/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
@@ -59,6 +59,12 @@ h2, h3, #sidebar-left a, #header {
   font-weight: bold;
   }
 
+h2.title {
+  font-weight:normal;
+  font-size: 26px;
+  line-height: 44px;
+  }
+
 h3 {
   font-size: 1.4em;
   }
