--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -265,7 +265,7 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
   }
 
 
-.node-type-biblio img, .biblio-entry img {
+.node.node-type-biblio img, .biblio-entry img {
   border: 1px solid #777;
   max-width:100%;
   }
