--- a/sites/all/themes/openscholar/scholar_base/css/tables.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tables.css
@@ -17,7 +17,7 @@ td:first-child {
 th {
   font-weight: bold;
   font-size: 1.1em;
-  border-bottom: 3px solid #ccc;
+  border-bottom: 3px solid #d9d9d9;
   }
 
 tbody, tbody th {
@@ -29,7 +29,12 @@ th.checkbox, td.checkbox {
   }
 
 tr.even, tr.odd {
-  background-color: transparent;
+  background-color: #fff;
+  border-bottom: 1px solid #d9d9d9;
+  }
+
+tr.odd {
+  background-color: #f3f3f3;
   }
 
 td {
