--- a/sites/all/themes/openscholar/scholar_base/css/tabs.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tabs.css
@@ -2,7 +2,7 @@
 .tabs {
   background-color: transparent;
   float: none;
-  margin: 0 0 10px 0;
+  margin: 0 0 1.5em 0;
   padding: 0;
 }
 
@@ -98,11 +98,6 @@
 
 
 /*****************************/
-
-div.tabs {
-  margin: 0 0 5px 0;
-  height: 19px;
-  }
 
 .tabs ul.primary {
   border-bottom: 1px solid #000;
