--- a/sites/all/themes/openscholar/cp_theme/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/cp-theme.css
@@ -85,17 +85,18 @@ body#tinymce ol li {
   border-right: 1px solid #bfc6c6;
   }
 
+
 #cp-content {
   left: 201px;
   width: auto;
   }
 
 body.sidebar-right #cp-content, body.two-sidebars #cp-content {
-  right: 231px;
+  right: 201px;
   }
 
 body.no-sidebars #cp-content, body.sidebar-right #cp-content {
-  left:30px;
+  left:0;
   }
 
 #sidebar-right {
@@ -116,7 +117,8 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 .innerframe {
   position: absolute;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
+  overflow-x: hidden;
   top: 0;
   bottom: 0;
   }
@@ -125,6 +127,12 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   width: 185px;
   }
 
+#cp-content .innerframe form,
+.view-display-id-page_1,
+#cp-content .views-processed,
+#cp-content .view-vsite-support{
+  margin: 30px;
+  }
 
 #cp-content .innerframe .view-display-id-default form {
   margin: 0 0 1.5em 0;
@@ -150,12 +158,18 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   }
 
 
+.item-list ul.context-links {
+  padding: 30px 0 0 30px;
+  float:none;
+  }
+
+
 .view-display-id-page_1 .item-list ul.context-links, html.js div.ctools-dropdown {
   padding: 0 0 30px 0;
   }
 
 html.js div.ctools-dropdown div.ctools-dropdown-container {
-  border: 1px solid #d9d9d9;
+  border: 1px solid #ccc;
   border-top: none;
   padding: 5px 0 0 0;
   background: #fff;
@@ -225,17 +239,6 @@ body.admin-menu #main-content {
   margin: 30px 0 0 30px;
   }
 
-#cp-content h2.title {
- display:none;
- }
-
-.section-node-edit #cp-content h2.title,
-.section-node-add #cp-content h2.title {
-  display:block;
-  border-bottom: 1px solid #d9d9d9;
-  padding-bottom: .5em;
-  }
-
 /* Exposed View Form */
 
 #cp-content .innerframe form#views-exposed-form-vsite-content-default {
@@ -244,6 +247,7 @@ body.admin-menu #main-content {
   background:#EAEBE9;
   font-size: .8em;
   }
+
 
 
 /* FOOTER Get rid of all this once the footer content is in a module */
