--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -60,11 +60,13 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
 .item-list ul.context-links {
   margin: 0;
   float:right;
+  background: url(../images/plus.png) no-repeat 6px 6px #daf3d5 !important;
+  padding: 1px 10px 5px 22px !important;
   }
 
 .item-list ul.context-links li, #ctools-dropdown-1 {
   list-style:none;
-  margin:0 0 0 .7em;
+  margin:0;
   list-style: none;
   padding: 0;
   }
@@ -84,8 +86,6 @@ div.ctools-dropdown div.ctools-dropdown-container ul li {
 .context-links a {
   font-style: normal !important;
   font-size: 12px !important;
-  background: url(../images/plus.png) no-repeat 0 50% transparent !important;
-  padding: 0 0 0 13px !important;
   }
 
 .context-links .ctools-dropdown-container-wrapper a,
