--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -12,6 +12,21 @@ h2 {
   line-height:1.083em;
   }
 
+h2.title {
+  margin-bottom: 1.5em;
+  }
+
+h2.with-tabs {
+  margin-bottom: .3em;
+  }
+
+.section-admin h2.title {
+  background: url(../images/admin-logo.png) no-repeat 0 50% transparent;
+  padding-left: 125px;
+  min-height: 52px;
+  margin: 1em 0;
+  }
+
 h3 {
   font-size: 1.1em;
   }
@@ -210,11 +225,13 @@ ul.hierarchic ul ul ul ul a{
 ul.pager {
   padding-top: 1em;
   border-top: 1px solid #ccc;
+  text-align: center;
   }
 
-.item-list ul.pager li {
+ul.pager li {
   margin: 0;
   padding: .3em;
+  display:inline;
   }
 
 ul.pager li.pager-current {
@@ -222,6 +239,14 @@ ul.pager li.pager-current {
   color: #fff;
   }
 
+div.views-admin-links {
+  padding: 1px 6px;
+  background: #eee;
+  }
+
+div.views-admin-links li {
+  font-size: 10px;
+  }
 
 dd.meta {
   color:#767676;
@@ -328,17 +353,17 @@ a.delete {
 /* BUTTONS */
 
 input.form-submit, button {
-  background: #b4c6ce;
+  background: #e8e8e8;
   color: #000;
-  border: 1px solid #a1aaae;
-  text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
-  padding: 2px 10px !important;
+  border: 1px solid #c4c4c4;
+  padding: 1px 5px !important;
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
-  margin-bottom: 5px;
+  margin: 5px 5px 5px 0;
   cursor: pointer;
   text-align: center;
   white-space: nowrap;
+  font-size: 10px;
   }
 
 .advanced-help-link {
