more css optimization

--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -56,25 +56,19 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   opacity: .93;
   }
 
-
-.item-list ul.context-links {
+.item-list ul.context-links,
+.section-cp div.ctools-dropdown {
   margin: 0;
   float:right;
   background: url(../images/plus.png) no-repeat 6px 6px #daf3d5 !important;
-  padding: 1px 10px 5px 22px !important;
+  padding: 1px 10px 2px 22px !important;
   }
 
-.item-list ul.context-links li, #ctools-dropdown-1 {
+.item-list ul.context-links li {
   list-style:none;
   margin:0;
   list-style: none;
   padding: 0;
-  }
-
-.item-list ul.context-links li,.ctools-dropdown,
-.ctools-dropdown .ctools-dropdown-link-wrapper,
-.ctools-dropdown .ctools-dropdown-container-wrapper,
-div.ctools-dropdown div.ctools-dropdown-container ul li {
   display:block;
   width: 100%;
   }
@@ -85,7 +79,7 @@ div.ctools-dropdown div.ctools-dropdown-container ul li {
 
 .context-links a {
   font-style: normal !important;
-  font-size: 12px !important;
+  font-size: 11px !important;
   }
 
 .context-links .ctools-dropdown-container-wrapper a,
