--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -241,11 +241,15 @@ ul.pager li.pager-current {
 
 div.views-admin-links {
   padding: 1px 6px;
-  background: #eee;
+  background: #333;
   }
 
 div.views-admin-links li {
   font-size: 10px;
+  }
+
+div.views-admin-links li a, div.views-admin-links li a:visited {
+  color: #fff;
   }
 
 dd.meta {
