commiting same fixes in staging to trunk

--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -190,8 +190,8 @@ a:active {
   font-weight: normal;
 }
 
-.biblio_file_links {
-  margin-left: .3em;
+.biblio_file_links a {
+  margin-left: .5em;
   }
 
 ul.biblio-export-buttons,ul.biblio-export-buttons li {
