--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -46,6 +46,10 @@ h3 {
   margin-top: 10px;
   }
 
+.node-teaser.node-type-scholar-software-project h3 {
+  margin:0;
+  }
+
 h4 {
   margin-bottom: 27px;
   }
@@ -145,7 +149,7 @@ a.more {
 .block .item-list .pager {
   background:#fff;
   margin: 0 -16px -26px -16px;
-  padding: .5em 0;
+  padding: 1em 0;
   border-top: 1px solid #E5E5E5;
   }
 
