many more presentation changes

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -48,6 +48,7 @@ h3 {
 
 .node-teaser.node-type-scholar-software-project h3 {
   margin:0;
+  color:#222;
   }
 
 h4 {
@@ -608,27 +609,6 @@ body.page-iqss-gking-research-group .ui-tabs-nav li.ui-tabs-selected a:visited {
 
 body.page-iqss-gking-research-group h3 {
   color: #000;
-  }
-
-.node-type-presentation.node-teaser {
-  margin-bottom: 1.5em;
-  }
-
-.node-type-presentation.node-teaser span.title,
-.node-type-presentation.node-teaser span.location {
-  font-weight:bold;
-  }
-
-.node-type-presentation.node-teaser div.filefield-file {
-  display:inline;
-  }
-
-.node-type-presentation.node-teaser div.filefield-file {
-  display:inline;
-  margin-right: .3em;
-  }
-.node-type-presentation.node-teaser div.filefield-file img {
-  vertical-align:middle;
   }
 
 /* FOOTER */
