--- a/sites/all/themes/openscholar/scholar_base/css/tables.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tables.css
@@ -33,9 +33,11 @@ tr.even, tr.odd {
   border-bottom: 1px solid #d9d9d9;
   }
 
+/*
 tr.odd {
   background-color: #f3f3f3;
   }
+*/
 
 td {
   color: #666;
