--- a/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
@@ -5,7 +5,7 @@ html {
 body {
     background-color: #44514f;
     color:#000;
-    font: 15px/normal 'Book Antiqua',garamond, 'times new roman', times, serif;
+    font: 15px/normal 'Book Antiqua', garamond, 'times new roman', times, serif;
     }
 
 #wrapper {
@@ -70,6 +70,12 @@ img {
   padding-left: 36px;
   }
 
+#sidebar-left {
+  width: 149px;
+  right: 216px;
+  border-right: 1px solid #ccc;
+  }
+
 body.header-left-main #header-wrapper {
   padding-right: 0;
   }
@@ -87,6 +93,10 @@ body.header-left-main #header-wrapper {
 #content-wrapper, #header-wrapper {
   padding-left: 226px;
   padding-right: 246px;
+  }
+
+#content-wrapper {
+  padding-left: 196px;
   }
 
 #header-wrapper {
@@ -121,13 +131,13 @@ body.no-sidebars #content-wrapper {
 #header h1 {
   margin-top: 16px;
   margin-bottom: 0;
-  font-size: 31px;
+  font-size: 27px;
   text-shadow: #222 0 0 .4em;
   color: #F7F3EA;
   }
 
 #header h2 {
-  font-size:21px;
+  font-size:20px;
   }
 
 #header a, #header a:visited,#header h2, #header p {
