--- a/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
+++ b/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
@@ -2,17 +2,18 @@
 	font-family: 'GoudyTrajanRegular';
 	src: url('fonts/GoudyTrajan-Regular.eot');
 	src: local('fonts/Goudy Trajan Regular'), local('fonts/GoudyTrajan-Regular'), url('fonts/GoudyTrajan-Regular.woff') format('woff'), url('fonts/GoudyTrajan-Regular.otf') format('opentype'), url('fonts/GoudyTrajan-Regular.svg#GoudyTrajan-Regular') format('svg');
-}
-
-
+  }
 
 body, #header, #footer, #wrapper {
     background: #2f341f;
-    color:#37352B;
-    font-family: georgia, serif;
     }
 
 /* TYPOGRAPHY*/
+
+body {
+  color:#37352B;
+  font-family: georgia, serif;
+  }
 
 a, a:visited {
     color:#a3a18c;
