--- a/sites/all/modules/openscholar_features/scholar_presentations/theme/scholar_presentations.css
+++ b/sites/all/modules/openscholar_features/scholar_presentations/theme/scholar_presentations.css
@@ -1,19 +1,26 @@
-.presentation-meta {
-  width: 5em;
-  float: left;
-  font-size: .8em;
-  }
-
-.presentation-meta .dates {
-  font-weight: bold;
-  }
-
-.presentation-content {
-  margin-left: 5.5em;
-  }
-
 .node-type-presentation.node-teaser .field-type-filefield .odd,
 .node-type-presentation.node-teaser .field-type-filefield .even {
  float:left;
  margin-right: .4em;
  }
+
+.node-type-presentation.node-teaser {
+  margin-bottom: 1.5em;
+  }
+
+.node-type-presentation.node-teaser span.title,
+.node-type-presentation.node-teaser span.location {
+  font-weight:bold;
+  }
+
+.node-type-presentation.node-teaser div.filefield-file {
+  display:inline;
+  }
+
+.node-type-presentation.node-teaser div.filefield-file {
+  display:inline;
+  margin-right: .3em;
+  }
+.node-type-presentation.node-teaser div.filefield-file img {
+  vertical-align:middle;
+  }
