theming for teaser-extra spans

--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -180,7 +180,11 @@ a:active {
   text-decoration: none;
   font-style: normal;
   font-weight: normal;
-}
+  }
+
+.biblio-abstract-display {
+  line-height: 1.5em;
+  }
 
 .biblio-export-links {
   float: right;
@@ -188,10 +192,6 @@ a:active {
   text-decoration: none;
   font-style: normal;
   font-weight: normal;
-}
-
-.biblio_file_links a {
-  margin-left: .5em;
   }
 
 ul.biblio-export-buttons,ul.biblio-export-buttons li {
@@ -203,7 +203,7 @@ ul.biblio-export-buttons,ul.biblio-export-buttons li {
   border-right: 1px;
   padding: 0;
   margin: 0.1em;
-}
+  }
 
 .biblio-annotation {
   text-align: left;
