css and markup optimization. New admin links presentation

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -232,6 +232,10 @@ body.admin-menu #main-content {
   margin: 30px 0 0 30px;
   }
 
+.page-cp-appearance #cp-settings-site {
+  margin-top: 0;
+  }
+
 #cp-content h2.title {
  display:none;
  }
