--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -38,15 +38,9 @@ div.form-item {
   margin-bottom:1.5em;
   }
 
-div.form-item, ul.links, div.admin-panel .body {
+div.form-item, div.admin-panel .body {
   display:block;
   }
-
-.node ul.links {
-  clear:both;
-  }
-
-
 
 legend, legend a, div.form-item label, fieldset h2.fieldset-title {
   color: #666;
