--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -87,7 +87,22 @@ p.copy a.footer-login:hover {
   background: #fff !important;
   }
 
-.marker, ul.admin li a, ul.admin li a:visited, .addcategory a, a.ctools-dropdown-link, a.context-button {
+
+.marker,
+ul.admin li a,
+ul.admin li a:visited,
+.addcategory a,
+a.ctools-dropdown-link,
+a.context-button {
+  color: #97c797 !important;
+  }
+
+.marker,
+ul.admin li a,
+ul.admin li a:visited,
+.addcategory a,
+.node:hover a.ctools-dropdown-link,
+a.context-button:hover {
   color: #228822 !important;
   }
 
@@ -159,6 +174,10 @@ ol {
 
 #content .node ul li ul {
   margin-top: 1.5em;
+  }
+
+#content .node .os-links ul li ul {
+  margin:0;
   }
 
 #content .node ul li li {
