--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -1,10 +1,9 @@
 html.js div.ctools-dropdown div.ctools-dropdown-container {
-  z-index: 1001;
   display: none;
   text-align: left;
   position: absolute;
   left: 0;
-  top: 19px
+  top: 0;
   }
 
 html.js div.ctools-dropdown div.ctools-dropdown-container ul li a {
@@ -39,8 +38,12 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul {
   margin-right: .5em;
   }
 
+.ctools-dropdown-container-wrapper {
+  position: relative;
+  }
+
 html.js div.ctools-dropdown div.ctools-dropdown-container {
-  min-width: 165px;
+  min-width: 153px;
   background: #fff;
   border: 1px solid #b2b2b2;
   border-bottom-color: #898989;
@@ -60,9 +63,15 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
 .section-cp div.ctools-dropdown {
   margin: 0;
   float:right;
-  background: url(../images/plus.png) no-repeat 6px 6px #daf3d5 !important;
+  background: url(../images/plus.png) no-repeat 6px 6px #eaf7e7 !important;
   padding: 1px 10px 2px 22px !important;
   }
+
+.item-list ul.context-links:hover,
+.section-cp div.ctools-dropdown:hover {
+  background-color: #daf3d5 !important;
+  }
+
 
 .item-list ul.context-links li {
   list-style:none;
@@ -71,10 +80,6 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   padding: 0;
   display:block;
   width: 100%;
-  }
-
-.ctools-dropdown {
-  position: relative;
   }
 
 .context-links a {
@@ -123,14 +128,15 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   font-weight: normal;
   }
 
-ul.links .vsite-admin a.ctools-dropdown-link {
-  background: url(../images/admin-wrench.png) 0 0 no-repeat transparent;
+.vsite-admin a.ctools-dropdown-link {
+  background: url(../images/admin-link.png) 0 0 no-repeat transparent;
   padding-left: 20px;
   font-size: 11px;
   }
 
-.vsite-admin a.ctools-dropdown-link:active {
-  border: 1px solid blue;
+.node:hover a.ctools-dropdown-link {
+  background-position: 0 -19px;
+
   }
 
 .empty-content .item-list ul.context-links li {
