--- a/sites/all/themes/openscholar/scholar_base/css/modal.css
+++ b/sites/all/themes/openscholar/scholar_base/css/modal.css
@@ -2,16 +2,23 @@
 
 /* CTools popup */
 
+#modalContent {
+  top: 0 !important;
+  }
+
 #modalBackdrop {
   background: blue;
   }
 div.ctools-modal-content {
   color: #000;
-  padding: 20px 0 25px 25px;
+  padding: 20px 0 0 25px;
   margin: 0;
   border: none;
   text-align: left;
   background: #fff;
+  -moz-box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
+  box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
   }
 
 #modal-content {
@@ -52,7 +59,7 @@ div.ctools-modal-content .modal-form {
   width: 70px;
   height:59px;
   background: url(../images/close-ctools.png) no-repeat 0 0 transparent;
-  bottom: 27px;
+  bottom: 35px;
   right: 23px;
   text-indent: -999em;
   }
