changes similar to staging

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -800,6 +800,9 @@ body.section-category .taxonomy-term-description {
   padding-left: 3em;
   }
 
+body.section-category .no-indent .node-teaser {
+  padding-left: 0;
+  }
 
 .taxonomy-term-child .node-inner .flL {
   display:none;
