--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -211,7 +211,6 @@ body.header-left-right #header-right {
   }
 
 
-
 /* NODE */
 
 .node, .biblio-entry {
@@ -228,6 +227,10 @@ body.header-left-right #header-right {
   margin-bottom: 0;
   }
 
+div.terms {
+  clear: left !important;
+  }
+
 .teaser-extra {
   margin-left: 1em;
   }
@@ -236,7 +239,7 @@ body.header-left-right #header-right {
   height: 1.5em;
   width:5em;
   float: right;
-  width: 68px;
+  width: 51px;
   text-align: right;
   }
 
