--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -2,11 +2,13 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   display: none;
   text-align: left;
   position: absolute;
-  left: 0;
+  left: -50%;
   top: 0;
+  z-index:1001;
   }
 
-html.js div.ctools-dropdown div.ctools-dropdown-container ul li a {
+html.js div.ctools-dropdown div.ctools-dropdown-container ul li a,
+.vsite-admin a.ctools-dropdown-link {
   display: block;
   }
 
