css and markup optimization

--- a/sites/all/modules/openscholar_features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/openscholar_features/scholar_image_gallery/scholar_image_gallery.css
@@ -4,7 +4,7 @@
   padding: 0;
   }
 
-#content .node .view-scholar-image-gallery ul li,
+#content .node .content .view-scholar-image-gallery ul li,
 .node-type-gallery #content .node .content ul li,
 .block .view-scholar-image-gallery li.views-row {
   list-style: none;
