--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -125,3 +125,23 @@
 .page-home #block-iqss_gking-areas_of_research dt.active span a {
   color:#e87702;
   }
+
+/* Taxonomy Node Ordering */
+
+.logged-in.section-category h2.title {
+  clear: both;
+  }
+
+.term-admin-links, h2.title .term-admin-links {
+  float: right;
+  height: 1.4em;
+  line-height: 24px;
+  font-weight: bold;
+  padding-bottom: 1em;
+  font-size: 12px;
+  letter-spacing: 0;
+  }
+
+table#ordernodes {
+  width:90%;
+  }
