--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -11,12 +11,20 @@ body {
 /* TYPOGRAPHY */
 
 @font-face {
-	font-family: 'ExpresswayRgRegular';
+	font-family: 'ExpresswayRegular';
 	src: url('fonts/expressway_rg-webfont.eot');
-	src: local('☺'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfont') format('svg');
+	src: local('fonts/Expressway'), local('fonts/ExpresswayRgRegular'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfontBZGc47Cg') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
+  }
+
+h1, h2, #navbar li, #footer {
+  font-weight: normal;
+	font-style: normal;
+	line-height:normal;
+	font-family: 'ExpresswayRegular', sans-serif;
+	font-size-adjust: 0.53;
+  }
 
 p {
   margin: 0 0 1.5em 0;
@@ -24,10 +32,6 @@ p {
 
 .biblio-note p {
   margin: 0;
-  }
-
-h1, h2, #navbar li, #footer {
-  font-family: 'ExpresswayRgRegular', sans-serif;
   }
 
 h2 {
