--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -3,7 +3,8 @@ html, body, #container {
   }
 
 body {
-  font: 12px/1.4em helvetica, arial, sans-serif;
+  font-size: 12px;
+  line-height:1.4em;
   color: #000;
   background: url(images/bg.png) repeat-y 50% 0 #333;
   }
@@ -351,6 +352,11 @@ body.section-category .node {
   height: 29px;
   line-height: 29px;
   text-transform: uppercase;
+  }
+
+#navbar ul{
+  width: 827px;
+  float: right;
   }
 
 #navbar ul li {
