--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -38,6 +38,8 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul {
   border: none;
   padding: 0 !important;
   margin-right: .5em;
+  clear: none;
+  width: auto;
   }
 
 .ctools-dropdown-container-wrapper {
