--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -269,6 +269,18 @@ div.views-admin-links {
   padding: 1px 6px;
   background: #333;
   float:right;
+  position:relative;
+  width: 15px;
+  height: 15px;
+  }
+
+div.views-admin-links ul {
+  display:none;
+  position:absolute;
+  }
+
+div.views-admin-links:hover ul {
+  display:block;
   }
 
 div.views-admin-links li {
