latest gary css to trunk; admin links

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -56,6 +56,21 @@ h3 {
   color:#222;
   }
 
+h3.cv-direct-download {
+  background: #717171;
+  padding: 3px 15px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  float: left;
+  margin: 0 0 15px 0;
+  color: #fff;
+  }
+
+h3.cv-direct-download a, h3.cv-direct-download a:visited {
+  color: #fa8b18;
+  }
+
 h4 {
   margin-bottom: 27px;
   }
@@ -355,7 +370,7 @@ body.section-category .node {
   }
 
 #navbar ul{
-  width: 827px;
+  width: 826px;
   float: right;
   }
 
