--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -214,13 +214,10 @@ body.header-left-right #header-right {
 /* NODE */
 
 .node, .biblio-entry {
-  padding-bottom: 1.5em;
+  padding-bottom: 0.938em;
+  margin-bottom: 1.875em;
   clear:both;
   position: relative;
-  }
-
-.views-row-first .node {
-  padding-top:0.688em;
   }
 
 .node-type-link {
@@ -241,16 +238,17 @@ div.terms {
   float: right;
   width: 51px;
   text-align: right;
+  display:none;
+  margin-top: 5px;
+  margin-right: 25px;
+  }
+
+.node:hover .os-links {
+  display:block;
   }
 
 .node.os-links-trail {
-  margin-top: -0.688em;
-  margin-right: -0.688em;
-  margin-left: -0.688em;
-  padding-top: 0.688em;
-  padding-left: 0.688em;
-  padding-right: 0.688em;
-  background-color: #f7fdf7;
+  outline: 1px dashed #999;
   }
 
 /* VIEWS */
